--- a/guide/elements/table.html
+++ b/guide/elements/table.html
@@ -4,9 +4,9 @@
             <p class="title">Default Grid</p>
         </div>
         <div class="g-example-body flex-inline">
-            <div class="table_style_type01">
+            <div  class="table_style_type01">
 
-                <div id="grid"></div>
+                <div data-role="grid"></div>
             </div>
         </div>
         <div class="g-example-foot">
