--- a/guide/elements.html
+++ b/guide/elements.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" type="text/css" href="./highlight/default.css">
     <link rel="stylesheet" type="text/css" href="./css/guide.css" />
     <!-- Load Styles -->
-    <link rel="stylesheet" href="../resources/lib/kendo/styles/kendo.common.min.css">
-    <link rel="stylesheet" href="../resources/lib/kendo/styles/kendo.default.min.css">
-    <link rel="stylesheet" href="../resources/css/index.css">
+    <!-- <link rel="stylesheet" href="../resources/lib/kendo/styles/kendo.common.min.css">
+    <link rel="stylesheet" href="../resources/lib/kendo/styles/kendo.default.min.css"> -->
+    <link rel="stylesheet" href="./../resources/css/index.css">
 </head>
 
 <body>
@@ -52,8 +52,8 @@
     <!--// .wrapper-->
 
     <!-- Load Scripts -->
-    <script src="../resources/lib/kendo/js/jquery.min.js"></script>
-    <script src="../resources/lib/kendo/js/kendo.all.min.js"></script>
+    <script src="./../resources/lib/kendo/js/jquery.min.js"></script>
+    <script src="./../resources/lib/kendo/js/kendo.all.min.js"></script>
     <!-- Guide Script -->
     <script type="text/javascript" src="./highlight/highlight.pack.js"></script>
     <script>
@@ -79,7 +79,7 @@
         });
     </script>
     <!-- Publish Script -->
-    <script src="../resources/js/common.js"></script>
+    <script src="./../resources/js/common.js"></script>
 
 
 </body>
