가이드 엘리멘츠 JS 수정
엘리멘츠 로드 후 켄도 적용

--- a/guide/elements.html
+++ b/guide/elements.html
@@ -71,7 +71,9 @@
             var tId = t.substring(1);
             elmPath = './elements/'+tId+'.html';
             g.html('');
-            g.load(elmPath);
+            g.load(elmPath, function() {
+                kendo.bind($(".wrapper"), {});
+            });
 
             params.set('elements', tId);
             url = location.pathname+'?'+params.toString();
