조회 페이지 작업 업데이트

--- a/guide/elements/button.html
+++ b/guide/elements/button.html
@@ -13,6 +13,12 @@
         </div>
         <div class="g-example-foot">
             <pre><code class="html">
+&lt;button data-role="button" class="blue">Button&lt;/button>
+&lt;button data-role="button" class="light-blue">Button&lt;/button>
+&lt;button data-role="button" class="blue-border">Button&lt;/button>
+&lt;button data-role="button" class="gray-border">Button&lt;/button>
+&lt;button data-role="button" class="green">Button&lt;/button>
+&lt;button data-role="button" class="blue">Button&lt;/button>
             </code></pre>
         </div>
     </div>
@@ -32,6 +38,12 @@
         </div>
         <div class="g-example-foot">
             <pre><code class="html">
+&lt;button data-role="button" class="blue" disabled="disabled">Button&lt;/button>
+&lt;button data-role="button" class="light-blue" disabled="disabled">Button&lt;/button>
+&lt;button data-role="button" class="blue-border" disabled="disabled">Button&lt;/button>
+&lt;button data-role="button" class="gray-border" disabled="disabled">Button&lt;/button>
+&lt;button data-role="button" class="green" disabled="disabled">엑셀&lt;/button>
+&lt;button data-role="button" class="blue" disabled="disabled">로그아웃&lt;/button>
             </code></pre>
         </div>
     </div>
@@ -50,6 +62,11 @@
         </div>
         <div class="g-example-foot">
             <pre><code class="html">
+&lt;button data-role="button" data-icon="example">&lt;span>Button&lt;/span>&lt;/button>
+&lt;button data-role="button" class="light-blue" data-icon="example">&lt;span>Button&lt;/span>&lt;/button>
+&lt;button data-role="button" class="blue-border" data-icon="example">&lt;span>Button&lt;/span>&lt;/button>
+&lt;button data-role="button" class="gray-border" data-icon="example">&lt;span>Button&lt;/span>&lt;/button>
+&lt;button data-role="button" class="green" data-icon="example">&lt;span>Button&lt;/span>&lt;/button>
             </code></pre>
         </div>
     </div>
@@ -72,6 +89,15 @@
         </div>
         <div class="g-example-foot">
             <pre><code class="html">
+&lt;ul data-role="buttongroup" class="btn-box period"
+data-index="0">
+    &lt;li data-role="button">Button&lt;/li>
+    &lt;li data-role="button">Button&lt;/li>
+    &lt;li data-role="button">Button&lt;/li>
+    &lt;li data-role="button">Button&lt;/li>
+    &lt;li data-role="button">Button&lt;/li>
+    &lt;li data-role="button">Button&lt;/li>
+&lt;/ul>
             </code></pre>
         </div>
     </div>
