--- a/guide/elements.html
+++ b/guide/elements.html
@@ -63,7 +63,9 @@
         var elmId = params.get('elements');
         var elmPath = './elements/'+elmId+'.html';
         var g = $('.g_content');
-        g.load(elmPath);
+        g.load(elmPath, function() {
+                kendo.bind($(".wrapper"), {});
+        }); 
 
         $('#elements li a').click(function (e) {
             e.preventDefault();
@@ -73,7 +75,7 @@
             g.html('');
             g.load(elmPath, function() {
                 kendo.bind($(".wrapper"), {});
-            });
+            }); 
 
             params.set('elements', tId);
             url = location.pathname+'?'+params.toString();
