--- a/guide/elements/form.html
+++ b/guide/elements/form.html
@@ -5,13 +5,11 @@
                 <p class="title">Dropdown</p>
             </div>
             <div class="g-example-body flex-block">
-                <select data-role="dropdownlist" data-option-label="선택">
-                    <!-- <option value="" selected>선택</option> -->
+                <select data-role="dropdownlist" data-value="선택" data-option-label="선택">
                     <option value="1">온라인</option>
                     <option value="2">오프라인</option>
                 </select>
-                <select data-role="dropdownlist" disabled>
-                    <option value="" selected>선택</option>
+                <select data-role="dropdownlist" data-value="선택" data-option-label="선택" disabled>
                     <option value="1">온라인</option>
                     <option value="2">오프라인</option>
                 </select>
@@ -19,6 +17,14 @@
 
             <div class="g-example-foot">
                 <pre><code class="html">
+&lt;select data-role="dropdownlist" data-value="선택" data-option-label="선택">
+    &lt;option value="1">온라인&lt;/option>
+    &lt;option value="2">오프라인&lt;/option>
+&lt;/select>
+&lt;select data-role="dropdownlist" data-value="선택" data-option-label="선택" disabled>
+    &lt;option value="1">온라인&lt;/option>
+    &lt;option value="2">오프라인&lt;/option>
+&lt;/select>
                 </code></pre>
             </div>
         </div>
@@ -34,6 +40,8 @@
 
             <div class="g-example-foot">
                 <pre><code class="html">
+&lt;input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
+&lt;input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31" disabled/> 
                 </code></pre>
             </div>
         </div>
@@ -58,6 +66,17 @@
             </div>
             <div class="g-example-foot">
                 <pre><code class="html">
+&lt;!-- [D] default 상태 -->
+&lt;input type="text" class="h-input sm" placeholder="placeholder" />
+&lt;!-- [D] with Data -->
+&lt;input type="text" class="h-input sm" value="Data" />
+&lt;!-- [D] disabled 상태 -->
+&lt;input type="text" class="h-input sm" value="disabled" disabled="disabled" />
+&lt;!-- [D] error 상태 -->
+&lt;div class="input-box sm error">
+    &lt;input type="text" class="h-input" value="error" />
+    &lt;p class="note">Error Message&lt;/p>
+&lt;/div>
                 </code></pre>
             </div>
         </div>
@@ -70,9 +89,7 @@
                 <div class="form-group">
                     <span class="label">검색항목</span>
                     <div class="form-set">
-                        <!-- <input class="kd-dropdown"> -->
-                        <select data-role="dropdownlist">
-                            <option value="" selected>선택</option>
+                        <select data-role="dropdownlist" data-value="선택" data-option-label="선택">
                             <option value="1">온라인</option>
                             <option value="2">오프라인</option>
                         </select>
@@ -84,9 +101,7 @@
                 <div class="form-group">
                     <span class="label">상담부서</span>
                     <div class="form-set">
-                        <!-- <input class="kd-dropdown"> -->
-                        <select data-role="dropdownlist">
-                            <option value="" selected>선택</option>
+                        <select data-role="dropdownlist" data-value="선택" data-option-label="선택">
                             <option value="1">온라인</option>
                             <option value="2">오프라인</option>
                         </select>
@@ -111,7 +126,43 @@
             </div>
             <div class="g-example-foot">
                 <pre><code class="html">
-
+&lt;div class="form-group">
+    &lt;span class="label">검색항목&lt;/span>
+    &lt;div class="form-set">
+        &lt;select data-role="dropdownlist" data-value="선택" data-option-label="선택">
+            &lt;option value="1">온라인&lt;/option>
+            &lt;option value="2">오프라인&lt;/option>
+        &lt;/select>
+        &lt;div class="input-box search lg">
+            &lt;input type="text" class="h-input" placeholder="입력해주세요">
+        &lt;/div>
+    &lt;/div>
+&lt;/div>
+&lt;div class="form-group">
+    &lt;span class="label">상담부서&lt;/span>
+    &lt;div class="form-set">
+        &lt;select data-role="dropdownlist" data-value="선택" data-option-label="선택">
+            &lt;option value="1">온라인&lt;/option>
+            &lt;option value="2">오프라인&lt;/option>
+        &lt;/select>
+    &lt;/div>
+&lt;/div>
+&lt;div class="form-group">
+    &lt;span class="label">검색기간&lt;/span>
+    &lt;div class="form-set">
+        &lt;input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
+        &lt;span class="bar">~&lt;/span>
+        &lt;input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
+        &lt;ul data-role="buttongroup" class="btn-box period"
+        data-index="0">
+            &lt;li data-role="button">오늘&lt;/li>
+            &lt;li data-role="button">7일&lt;/li>
+            &lt;li data-role="button">15일&lt;/li>
+            &lt;li data-role="button">1개월&lt;/li>
+            &lt;li data-role="button">3개월&lt;/li>
+        &lt;/ul>
+    &lt;/div>
+&lt;/div>
                 </code></pre>
             </div>
         </div>
