--- a/guide/elements/icon.html
+++ b/guide/elements/icon.html
@@ -4,7 +4,7 @@
     }
 
     .h-ico.mail {
-        background: #eee;
+        background-color: #eee;
     }
 
     .g-label {
@@ -23,7 +23,7 @@
         </div>
         <div class="g-example-body flex-block">
             <div>
-                <span class="g-label">랜덤 사이즈</span>
+                <span class="g-label">비정형 사이즈</span>
                 <i class="h-ico filter">필터</i>
             </div>
             <div>
@@ -61,6 +61,42 @@
         </div>
         <div class="g-example-foot">
             <pre><code class="html">
+&lt;div>
+    &lt;span class="g-label">비정형 사이즈&lt;/span>
+    &lt;i class="h-ico filter">필터&lt;/i>
+&lt;/div>
+&lt;div>
+    &lt;span class="g-label">15*15 사이즈&lt;/span>
+    &lt;i class="h-ico xs up">위로&lt;/i>
+    &lt;i class="h-ico xs down">아래로&lt;/i>
+    &lt;i class="h-ico xs time">시간&lt;/i>
+&lt;/div>
+&lt;div>
+    &lt;span class="g-label">16*16 사이즈&lt;/span>
+    &lt;i class="h-ico xsm mail">메일&lt;/i>
+    &lt;i class="h-ico xsm rotate-left">왼쪽으로 돌리기&lt;/i>
+    &lt;i class="h-ico xsm rotate-right">오른쪽으로 돌리기&lt;/i>
+&lt;/div>
+&lt;div>
+    &lt;span class="g-label">18*18 사이즈&lt;/span>
+    &lt;i class="h-ico sm bookmark funcToggle">북마크&lt;/i>
+    &lt;i class="h-ico sm search">검색&lt;/i>
+    &lt;i class="h-ico sm search" disabled="disabled">검색&lt;/i>
+    &lt;i class="h-ico sm search blue">검색&lt;/i>
+    &lt;i class="h-ico sm menu1">메뉴&lt;/i>
+    &lt;i class="h-ico sm menu2">메뉴&lt;/i>
+    &lt;i class="h-ico sm menu3">메뉴&lt;/i>
+    &lt;i class="h-ico sm menu4">메뉴&lt;/i>
+    &lt;i class="h-ico sm menu8">메뉴&lt;/i>
+&lt;/div>
+&lt;div>
+    &lt;span class="g-label">20*20 사이즈&lt;/span>
+    &lt;i class="h-ico md profile">프로필&lt;/i>
+&lt;/div>
+&lt;div>
+    &lt;span class="g-label">26*26 사이즈&lt;/span>
+    &lt;i class="h-ico lg tip">팁&lt;/i>
+&lt;/div>
             </code></pre>
         </div>
     </div>
