--- a/guide/elements/table.html
+++ b/guide/elements/table.html
@@ -4,13 +4,65 @@
             <p class="title">Default Grid</p>
         </div>
         <div class="g-example-body flex-inline">
-            <div  class="table_style_type01">
-
-                <div data-role="grid"></div>
+            <div class="table-content grid">
+                <div data-role="grid" data-sortable="true" data-editable="false" data-columns='[
+                    { "field": "N", "width": 50 },
+                    { "field": "NO", "width": 50 },
+                    { "field": "상품코드", "width": 90 },
+                    { "field": "상품명", "width": 170 },
+                    { "field": "어플리케이션", "width": 146 },
+                    { "field": "표준가격", "width": 140 },
+                    { "field": "최소가격", "width": 146 }
+                ]' data-bind="source: gridSource">
+                </div>
+                <div class="table-bottom">
+                    <button data-role="button" class="gray-border">삭제</button>
+                </div>
             </div>
+            <script>
+                var viewModel = kendo.observable({
+                    gridSource: [
+                        { "N":"ch", "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원"},
+                        { "N":"ch", "NO":"2",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원"},
+                        { "N":"ch", "NO":"3",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원"}
+                    ],
+                    displayGridSource: function() {
+                        return stringify(this.get("gridSource").toJSON());
+                    },
+                });
+                kendo.bind($(".table-content.grid"), viewModel);
+            </script>
         </div>
         <div class="g-example-foot">
             <pre><code class="html">
+&lt;div class="table-content grid">
+    &lt;div data-role="grid" data-sortable="true" data-editable="false" data-columns='[
+        { "field": "N", "width": 50 },
+        { "field": "NO", "width": 50 },
+        { "field": "상품코드", "width": 90 },
+        { "field": "상품명", "width": 170 },
+        { "field": "어플리케이션", "width": 146 },
+        { "field": "표준가격", "width": 140 },
+        { "field": "최소가격", "width": 146 }
+    ]' data-bind="source: gridSource">
+    &lt;/div>
+    &lt;div class="table-bottom">
+        &lt;button data-role="button" class="gray-border">삭제&lt;/button>
+    &lt;/div>
+&lt;/div>
+&lt;script>
+    var viewModel = kendo.observable({
+        gridSource: [
+            { "N":"ch", "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원"},
+            { "N":"ch", "NO":"2",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원"},
+            { "N":"ch", "NO":"3",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원"}
+        ],
+        displayGridSource: function() {
+            return stringify(this.get("gridSource").toJSON());
+        },
+    });
+    kendo.bind($(".table-content.grid"), viewModel);
+&lt;/script>
             </code></pre>
         </div>
     </div>
@@ -18,7 +70,7 @@
 
     <div class="g-example-wrap">
         <div class="g-example-head">
-            <p class="title">Button Color</p>
+            <p class="title">Grid2</p>
         </div>
         <div class="g-example-body flex-inline">
 
@@ -30,18 +82,6 @@
     </div>
 
 
-    <div class="g-example-wrap">
-        <div class="g-example-head">
-            <p class="title">Button Status (disabled)</p>
-        </div>
-        <div class="g-example-body flex-inline">
-
-        </div>
-        <div class="g-example-foot">
-            <pre><code class="html">
-            </code></pre>
-        </div>
-    </div>
 
 
 
