--- a/guide/list.html
+++ b/guide/list.html
@@ -9,17 +9,18 @@
     <link rel="stylesheet" type="text/css" href="./css/guide.css" />
 
     <style>
+        table { table-layout: fixed; }
         thead tr { background: #eee; }
-        tbody tr.do :not(.d1):not(.d2):not(.d3) {
+        tbody tr.do {
             background-color: lightblue;
         }
-        tbody tr.todo th:not(.d1):not(.d2):not(.d3),
+        /* tbody tr.todo th:not(.d1):not(.d2):not(.d3),
         tbody tr.todo th:not(.d1):not(.d2):not(.d3) span,
         tbody tr.todo td:not(.d1):not(.d2):not(.d3),
         tbody tr.todo td:not(.d1):not(.d2):not(.d3) span,
         tbody tr.todo td:not(.d1):not(.d2):not(.d3) a {
             color: rgb(0, 119, 255);
-        }
+        } */
         .d4 { display: none; }
         .del {
             position: relative;
@@ -28,6 +29,7 @@
             background: red;
             text-decoration: line-through;
         }
+        .d1, .d2, .d3 { text-align: left !important;}
         tr td:last-child {
             text-align: left;
         }
@@ -63,15 +65,19 @@
         </div>
         <table class="tbl_guide">
             <colgroup>
-                <col width="30%">
-                <col>
-                <col width="10%">
-                <col width="10%">
-                <col width="10%">
-                <col width="10%">
+                <col width="110px">
+                <col width="150px">
+                <col width="">
+                <col width="100px">
+                <col width="80px">
+                <col width="90px">
+                <col width="80px">
+                <col width="">
             </colgroup>
             <thead>
                 <tr>
+                    <th scope="col">1depth</th>
+                    <th scope="col">2depth</th>
                     <th scope="col">화면명</th>
                     <th scope="col">경로</th>
                     <th scope="col">작업자</th>
@@ -82,7 +88,9 @@
             </thead>
             <tbody>
                 <tr class="">
-                    <td></td>
+                    <td class="d1"></td>
+                    <td class="d2"></td>
+                    <td class="d3"></td>
                     <td>Base Template</td>
                     <td class="coder">방휘랑</td>
                     <td class="date"></td>
@@ -90,11 +98,323 @@
                     <td></td>
                 </tr>
                 <tr class="">
-                    <td>07서비스품질_01상담정보관리_01조회</td>
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">01상담정보관리</td>
+                    <td class="d3">01조회</td>
                     <td class="sbid"><span class="pc">SA0101</span><span class="mo"></span></td>
                     <td class="coder">주진희</td>
                     <td class="date"></td>
-                    <td class="state" data-state="done"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">01상담정보관리</td>
+                    <td class="d3">02상세_popup</td>
+                    <td class="sbid"><span class="pc">SA0102</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">02요청사항관리</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA0201</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">02요청사항관리</td>
+                    <td class="d3">02등록_popup</td>
+                    <td class="sbid"><span class="pc">SA0202</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">02요청사항관리</td>
+                    <td class="d3">03고객사검색_popup</td>
+                    <td class="sbid"><span class="pc">SA0203</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">02요청사항관리</td>
+                    <td class="d3">03등록결과_popup</td>
+                    <td class="sbid"><span class="pc">SA0203_2</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">02요청사항관리</td>
+                    <td class="d3">04상세정보_popup</td>
+                    <td class="sbid"><span class="pc">SA0204</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">02요청사항관리</td>
+                    <td class="d3">05계약변경심사처리상세_popup</td>
+                    <td class="sbid"><span class="pc">SA0205</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">03민원조치</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA0301</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">03민원조치</td>
+                    <td class="d3">02해지계좌복원_popup</td>
+                    <td class="sbid"><span class="pc">SA0302</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">03민원조치</td>
+                    <td class="d3">02해지계좌복원_처리결과_popup</td>
+                    <td class="sbid"><span class="pc">SA0302_2</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">03민원조치</td>
+                    <td class="d3">03회원정보해지_popup</td>
+                    <td class="sbid"><span class="pc">SA0303</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">03민원조치</td>
+                    <td class="d3">03회원정보해지_alert</td>
+                    <td class="sbid"><span class="pc">SA0303_2</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">04공지사항관리</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA0401</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">04공지사항관리</td>
+                    <td class="d3">02공지안내발송</td>
+                    <td class="sbid"><span class="pc">SA0402</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">04공지사항관리</td>
+                    <td class="d3">03등록수정</td>
+                    <td class="sbid"><span class="pc">SA0403</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">05SMS관리</td>
+                    <td class="d3">01발송_popup</td>
+                    <td class="sbid"><span class="pc">SA0501</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">05SMS관리</td>
+                    <td class="d3">01발송_01불러오기_popup</td>
+                    <td class="sbid"><span class="pc">SA0501_01</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">05SMS관리</td>
+                    <td class="d3">01발송_02엑셀업로드_popup</td>
+                    <td class="sbid"><span class="pc">SA0501_02</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">05SMS관리</td>
+                    <td class="d3">02메세지설정_popup</td>
+                    <td class="sbid"><span class="pc">SA0502</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">05SMS관리</td>
+                    <td class="d3">03발송현황_popup</td>
+                    <td class="sbid"><span class="pc">SA0503</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">06이메일관리</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA0601</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">06이메일관리</td>
+                    <td class="d3">02이메일발송</td>
+                    <td class="sbid"><span class="pc">SA0602</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">06이메일관리</td>
+                    <td class="d3">02이메일발송_01수신자추가</td>
+                    <td class="sbid"><span class="pc">SA0602_01</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">06이메일관리</td>
+                    <td class="d3">02이메일발송_02대량수신자추가</td>
+                    <td class="sbid"><span class="pc">SA0602_02</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">06이메일관리</td>
+                    <td class="d3">02이메일발송_03수신거부관리_popup</td>
+                    <td class="sbid"><span class="pc">SA0603</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">07서류양식관리</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA0701</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">07서류양식관리</td>
+                    <td class="d3">02상세_popup</td>
+                    <td class="sbid"><span class="pc">SA0702</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">07서류양식관리</td>
+                    <td class="d3">03등록수정_popup</td>
+                    <td class="sbid"><span class="pc">SA0703</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">08정기자료관리</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA0801</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">09사후점검제출확인</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA0901</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
+                <tr class="">
+                    <td class="d1">07서비스품질</td>
+                    <td class="d2">10동의자료확인</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA1001</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
                     <td></td>
                 </tr>
             </tbody>
