--- a/pages/SA/SA0201.html
+++ b/pages/SA/SA0201.html
@@ -21,7 +21,7 @@
                 <div class="contents-header">
                     <div class="title-box lg">
                         <div class="left-group">
-                            <h2 class="main-title">상담정보 관리</h2>
+                            <h2 class="main-title">요청사항 관리</h2>
                             <button type="button" class="h-ico lg tip ml-8">팁</button>
                             <button type="button" class="h-ico sm bookmark ml-4 funcToggle">북마크</button>
                         </div>
@@ -32,7 +32,7 @@
                                 data-navigational=true,
                                 data-items='[
                             { type:"rootitem", href: "", text: "서비스품질", showText: true },
-                            { type:"item", href: "", text: "상담정보 관리", showText: true}
+                            { type:"item", href: "", text: "요청사항 관리", showText: true}
                          ]'/>
                         </div>
                     </div>
@@ -55,28 +55,9 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <span class="label">상담부서</span>
-                                <div class="form-set">
-                                    <select data-role="dropdownlist" data-value="전체" data-option-label="전체">
-                                        <option value="1">온라인</option>
-                                        <option value="2">오프라인</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <span class="label">검색기간</span>
-                                <div class="form-set">
-                                    <input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
-                                    <span class="bar">~</span>
-                                    <input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
-                                    <ul data-role="buttongroup" class=""
-                                    data-index="0">
-                                        <li data-role="button">오늘</li>
-                                        <li data-role="button">7일</li>
-                                        <li data-role="button">15일</li>
-                                        <li data-role="button">1개월</li>
-                                        <li data-role="button">3개월</li>
-                                    </ul>
+                                <div class="h-checkbox">
+                                    <input type="checkbox" id="checkbox1-1" name="checkbox" />
+                                    <label for="checkbox1-1"><span>완료 건 제외</span></label>
                                 </div>
                             </div>
                             <button type="submit" data-role="button" class="search" data-icon="search-blue"><span>검색</span></button>
@@ -91,7 +72,8 @@
                                 </div>
                                 <div class="right-group">
                                     <div class="btn-box">
-                                        <button data-role="button">상품등록</button>
+                                        <button data-role="button">요청사항등록</button>
+                                        <button data-role="button" class="green">엑셀</button>
                                     </div>
                                 </div>
                             </div>
