스크립트 경로수정

--- a/pages/SA/SA0602.html
+++ b/pages/SA/SA0602.html
@@ -93,9 +93,9 @@
     </div>
 
     <!-- Default Script Include -->
-    <script src="/resources/lib/kendo/js/jquery.min.js"></script>
-    <script src="/resources/lib/kendo/js/kendo.all.min.js"></script>
-    <script src="/resources/js/common.js"></script>
+    <script src="../../resources/lib/kendo/js/jquery.min.js"></script>
+    <script src="../../resources/lib/kendo/js/kendo.all.min.js"></script>
+    <script src="../../resources/js/common.js"></script>
     <script>
             var viewModel = kendo.observable({
                 gridSource: [
